# Roamloid

./: .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  labels.json
.github/ISSUE_TEMPLATE/: error_report.md  issue-basic-template.md
.github/workflows/: backend-ci.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: .gitignore  README.md  app.py  db.sqlite3  requirements.txt  run.py  run_dev.sh  tasks.ps1
backend/app/: __init__.py  errors.py
backend/app/config/: settings.py
backend/app/models/: __init__.py
backend/app/realtime/: __init__.py  socket_events.py
backend/app/routes/: api.py  (+1 more)
backend/apps/: __init__.py  models.py  settings.py
flask/: .gitignore  README.md  requirements.txt
flask/apps/: roamloid.py  views.py
src/: App.tsx  index.css  main.tsx
src/assets/: index.css
src/components/: AiStatusBadge.tsx  AuthCard.tsx  CharacterModel.tsx  ChatLogPanel.tsx  ChatOverlay.tsx  DebugMenu.tsx  WarpParticles.tsx  aisamples.ts  index.ts  index.tsx
src/hooks/: useSocketManager.ts  useWarpControl.ts
src/lib/: aisamples.ts  index.ts
src/pages/: DeviceSelection.tsx  Login.tsx  LoginPage.tsx  Register.tsx
src/routes/: AppRoutes.tsx  ProtectedRoute.tsx
src/utils/: aisamples.ts  api.ts
test/: auth.rest  client.js  health.rest  login.css  login.html  login.js  signup.html  socketio_test.html  style.css
tests/: conftest.py  test_health.py  test_socket.py
(+20 files in other folders)
